Implemented JWT role-based authorization